<resources>
    <string name="app_name" translatable="false">KonAnalysis</string>

    <!-- Common -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Menu -->
    <string name="menu_scan">Scan</string>
    <string name="menu_setting">setting</string>
    <string name="menu_logging">select logging</string>
    <string name="menu_notifications">Notifications</string>

    <!-- Bottom Nav -->
    <string name="nav_driver">Driver</string>
    <string name="nav_data">Data state</string>
    <string name="nav_gps">GPS</string>
    <string name="nav_imu">Motion Sensor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Scan device -->
    <string name="scan_scan">Scan</string>
    <string name="scan_select_device">Select a device</string>
    <string name="scan_scanning">Scanning for devices...</string>
    <string name="scan_cancel">Cancel</string>
    <string name="scan_unkown">Unkown device</string>

    <!-- Permission string -->
    <string name="permission_internet_denied">If you </string>
    <string name="permission_bluetooth_denied"></string>
    <string name="permission_bluetooth_admin_denied"></string>
    <string name="permission_fine_location_denied"></string>
    <string name="permission_coarse_location_denied"></string>
    <string name="permission_vibrate_denied"></string>
    <string name="permission_wake_lock_denied"></string>
    <string name="permission_read_ext_storage_denied"></string>
    <string name="permission_write_ext_storage_denied"></string>

    <string name="permission_int_access"></string>
    <string name="permission_ble_access"></string>
    <string name="permission_gps_access"></string>
    <string name="permission_imu_access"></string>
    <string name="permission_ext_access"></string>

    <string name="permission_int_denied"></string>
    <string name="permission_ble_denied"></string>
    <string name="permission_gps_denied"></string>
    <string name="permission_imu_denied"></string>
    <string name="permission_ext_denied"></string>
    <!-- Support -->
    <string name="ble_not_supported">BLE not supported</string>

    <!-- Driver Fragment -->
    <string name="today_Date">Today: </string>
    <string name="current_Time">Current time: </string>
    <string name="driving_Time">Logging time: </string>
    <string name="logging_record">Logging recording</string>
    <string name="logging_not_record">Logging start</string>
    <string name="driving_result">Result: </string>

    <string name="confidence_1">CON1:</string>
    <string name="confidence_2">CON2:</string>
    <string name="confidence_3">CON3:</string>
    <string name="confidence_4">CON4:</string>
    <string name="confidence_5">CON5:</string>
    <string name="confidence_6">CON6:</string>
    <string name="confidence_7">CON7:</string>
    <string name="confidence_8">CON8:</string>

    <!-- OBD Data Fragment -->
    <string name="obd_rx_data">BLE Data HEX: </string>
    <string name="obd_odometer">Odo meter: </string>
    <string name="obd_steer_wheel">Steer wheel angle: </string>
    <string name="obd_brake">Brake pressure: </string>
    <string name="obd_blinker">Blinker: </string>
    <string name="obd_gear_position">Gear position: </string>
    <string name="obd_seat_belt">Seat belt: </string>
    <string name="obd_speed">OBD speed: </string>
    <string name="obd_fl_speed">Front Left wheel speed: </string>
    <string name="obd_fr_speed">Front Right wheel speed: </string>
    <string name="obd_rl_speed">Rear Left wheel speed: </string>
    <string name="obd_rr_speed">Rear Right wheel speed: </string>
    <string name="obd_accel">Accel: </string>
    <string name="obd_throtle">Throtle: </string>
    <string name="obd_longitudinal">Longitudinal: </string>
    <string name="obd_lateral">Lateral: </string>
    <string name="obd_yaw">Yaw rate: </string>
    <string name="obd_result">Driver result: </string>

    <!-- GPS Fragment -->
    <string name="gps_latitude">Latitude: </string>
    <string name="gps_longitude">Longitude: </string>
    <string name="gps_heading_angle">GPS Heading: </string>

</resources>
