<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_bluetooth_white_24dp"
        android:title="@string/menu_scan"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/menu_notifications"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_logging"
        android:title="@string/menu_logging"
        app:showAsAction="never"/>
</menu>
