<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.re.eslab.konanalysis.View.Fragments.GpsFragment">

    <fragment
        android:id="@+id/gps_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Text group -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/fragment_gps_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="24dp"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold"
            android:layout_gravity="right"
            android:text="Speed" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextBlack"
                android:text="@string/gps_latitude" />

            <TextView
                android:id="@+id/fragment_gps_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextGray"
                android:text="Latitude" />

        </LinearLayout>


      <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextBlack"
                android:text="@string/gps_longitude" />

            <TextView
                android:id="@+id/fragment_gps_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextGray"
                android:text="Longitude" />
      </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextBlack"
                android:text="@string/gps_heading_angle" />

            <TextView
                android:id="@+id/fragment_gps_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextGray"
                android:text="Longitude" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>